--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
     <groupId>climb_search_framework</groupId>
     <artifactId>climb_search_framework</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -19,5 +23,25 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <scm>
+        <tag>master</tag>
+        <url>git@github.com:cloudnil/marathon-client.git</url>
+        <connection>scm:git:git@github.com:cloudnil/marathon-client.git</connection>
+        <developerConnection>scm:git:git@github.com:cloudnil/marathon-client.git</developerConnection>
+    </scm>
+    <developers>
+        <developer>
+            <name>cloudnil</name>
+            <email>cloudnil@126.com</email>
+            <organization>CloudNil</organization>
+        </developer>
+    </developers>
 
 </project>
