--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>7</version>
-    </parent>
     <groupId>com.github.zhengzhanpeng</groupId>
     <artifactId>recurrent_search_framework</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -23,19 +18,16 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <name>recurrent_search_framework</name>
+    <description>recurrent-search-framework--it is absorbed in resolve recurrent search</description>
+    <url>https://github.com/zhengzhanpeng/recurrent-search-framework</url>
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
         </license>
     </licenses>
-    <scm>
-        <tag>master</tag>
-        <url>git@github.com:cloudnil/marathon-client.git</url>
-        <connection>scm:git:git@github.com:zhengzhanpeng/recurrent-search-framework.git</connection>
-        <developerConnection>scm:git:git@github.com:zhengzhanpeng/recurrent-search-framework.git</developerConnection>
-    </scm>
     <developers>
         <developer>
             <name>ZhengZhanpeng</name>
@@ -43,5 +35,80 @@
             <organization>ZhengZhanpeng</organization>
         </developer>
     </developers>
+    <scm>
+        <tag>master</tag>
+        <url>git@github.com:zhengzhanpeng/recurrent-search-framework.git</url>
+        <connection>scm:git:git@github.com:zhengzhanpeng/recurrent-search-framework.git</connection>
+        <developerConnection>scm:git:git@github.com:zhengzhanpeng/recurrent-search-framework.git</developerConnection>
+    </scm>
 
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <!-- Source -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>2.2.1</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!-- Javadoc -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.9.1</version>
+                        <configuration>
+                            <show>private</show>
+                            <nohelp>true</nohelp>
+                            <charset>UTF-8</charset>
+                            <encoding>UTF-8</encoding>
+                            <docencoding>UTF-8</docencoding>
+                            <additionalparam>-Xdoclint:none</additionalparam>  <!-- TODO 临时解决不规范的javadoc生成报错,后面要规范化后把这行去掉 -->
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!-- GPG -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.5</version>
+                        <executions>
+                            <execution>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>oss</id>
+                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+                </snapshotRepository>
+                <repository>
+                    <id>oss</id>
+                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+    </profiles>
 </project>
