--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.zhengzhanpeng</groupId>
-    <artifactId>recurrent_search_framework</artifactId>
+    <artifactId>recurrent-search</artifactId>
     <version>1.0.0</version>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
